# Gen-AI-Book-Cover-Creator

./: .gitignore  README.md  goodreads_scraper.py  image_resizer.py  main.py  pyproject.toml
src/evaluation/: image_creating.py
src/scraper/: goodreads_scraper.py  image_resizer.py
src/training/: conditional_train.py  train.py  training_config.py  unconditional_train.py
testing/: image_resizing_testing.py  next_page_testing.py  webscraper_testing.py
testing/scraper/: description_testing.py  webscraper_testing.py
testing/training/: cuda_testing.py
