[project]
name = "gen-ai-book-cover-creator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.8.1",
    "bs4>=0.0.2",
    "datasets>=4.0.0",
    "diffusers>=0.34.0",
    "matplotlib>=3.10.3",
    "pillow>=11.3.0",
    "requests>=2.32.4",
    "torch",
    "torchvision",
    "torchaudio",
    "tensorboard>=2.20.0",
]
